--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
 
         <div class="addMenu">
             <input type="text" id="inputTask" placeholder="Add your Task">
-            <button>
+            <button id="addButton">
                 <h2>Add</h2>
             </button>
         </div>
         
         <div class="listing">
             <ul>
-                <li>Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
-
     </div>
-    <script>scripts.js</script>
+    <script src="scripts.js"></script>
 </body>
 </html>
