feat- add javascript to clear the input box,add a css unchecked button

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
         </div>
         
         <div class="listing">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+            <ul id="todoList">
             </ul>
         </div>
     </div>
