feat - add the clear the button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         
         <div class="listing">
             <ul id="todoList">
+                <!-- <li class="checked">Task1</li>
+                <li>Task2</li>
+                <li>Task3</li> -->
             </ul>
+        </div>
+        <div class="clearAll">
+            <img src="icons/tool.png">
         </div>
     </div>
     <script src="scripts.js"></script>
