feat: convert to typescrpit

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <img src="icons/tool.png" />
       </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="/dist/scripts.js"></script>
   </body>
 </html>
